--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,13 @@ h1 {
   font-size: 250%;
 }
 
+
+mat-toolbar {
+    background-color: #373B44;
+    color: white;
+}
+
+
 example-spacer {
   flex: 1 1 auto;
 }
@@ -51,6 +58,12 @@ example-spacer {
 
 .list-item:hover{
     cursor: pointer;
-    background-color: #3f51b5;
+    background-color: #373B44;
     color: white;
+}
+.list-item-tittle{
+  color: #373B44;
+  text-decoration: underline;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
 }
