--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,6 +13,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" routerLink="/map">Mapa</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
