--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,35 +22,35 @@
     <mat-sidenav-container class="example-container">
       
       <mat-sidenav #sidenav class="example-sidenav">
-        <mat-list class="list-nav">
+        <mat-list class="list-nav" width="400">
             <mat-list-item class="list-item-tittle"> <h2>Topics</h2> </mat-list-item>
             
             <mat-list-item class="list-item" *ngFor="let topic of mTopics; let i = index" (click)="searchArticles(source.id);sidenav.close();">
              
-              <div mat-card-avatar  [ngStyle]="{'background-image': 'url(../assets/images/'+ i +'.png)'}" class="example-header-image"></div>
+              <div mat-card-avatar  [ngStyle]="{'background-image': 'url(../assets/images/'+ topic.img_id +'.png)'}" class="example-header-image"></div>
               
               <span class="source-name">  {{topic.name}}</span>
-            
+              <button class= "mat-button1" color="primary" ><mat-icon>beenhere</mat-icon> Suscribe</button>
             </mat-list-item>
         </mat-list>
       </mat-sidenav>
-      <mat-card class="example-card"  *ngFor="let article of mArticles">
-        <mat-card-header >
-          <div mat-card-avatar  [ngStyle]="{'background-image': 'url(../assets/images/'+ i +'.png)'}" class="example-header-image"></div>
-          <mat-card-title class="title">{{article.title}}</mat-card-title>
-          <mat-card-subtitle>{{article.source.name}}</mat-card-subtitle>
+      <mat-card class="example-card"  *ngFor="let newsletter of mNewsletters">
+        <mat-card-header>
+          <div mat-card-avatar [ngStyle]="{'background-image': 'url(../assets/images/'+ newsletter.topics[0].img_id +'.png)'}" class="example-header-image"></div>
+          <mat-card-title class="title">{{newsletter.title}}</mat-card-title>
+          <mat-card-subtitle>{{newsletter.topics[0].name}}</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image class="img-article" src={{article.urlToImage}} alt="">
+        <img mat-card-image class="img-article" src={{newsletter.url_to_image}} alt="">
         <mat-card-content>
           <p>
-            {{article.description}}
+            {{newsletter.description}}
           </p>
         </mat-card-content>
         <mat-card-actions class="action-buttons">
-          <button mat-button color="primary"><mat-icon>thumb_up_alt</mat-icon> 12 Likes</button>
-          <button mat-button color="primary"><mat-icon>comment</mat-icon> Comments</button>
-          <button mat-button color="primary"><mat-icon>share</mat-icon> Share</button>
-          <a mat-button color="primary" href={{article.url}} target="_blank" ><mat-icon>visibility</mat-icon> More</a>
+          <button mat-button ><mat-icon>thumb_up_alt</mat-icon> 12 Likes</button>
+          <button mat-button ><mat-icon>comment</mat-icon> Comments</button>
+          <button mat-button ><mat-icon>share</mat-icon> Share</button>
+          <a mat-button  href={{newsletter.urlToImage}} target="_blank" ><mat-icon>visibility</mat-icon> More</a>
         </mat-card-actions>
       </mat-card>
     </mat-sidenav-container>
@@ -60,6 +60,7 @@
     
   </div>
 </div>
+<app-user-suscribing></app-user-suscribing>
 
 
 
