--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Acerca de </a>
-        <a class="nav-link" routerLink="/map">Mapa</a>
+        <a class="nav-link" routerLink="/map">Mapa centros de atención</a>
       </li>
       <!--
       <li class="nav-item dropdown">
