form for suscribing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,5 +2,5 @@
     
   </h1>
 <p>
-  <img width="80%" alt="banner" src="http://toxidrogasun.unal.edu.co/images/respuestas.png"/>
+  <img width="85%" style="display: block;  margin-left: auto;  margin-right: auto;" alt="banner" src="http://toxidrogasun.unal.edu.co/images/respuestas.png"/>
 </p>
