--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5" >
   <a class="navbar-brand bg-light" href="#" >
-    <img width="300"  src="http://toxidrogasun.unal.edu.co/images/logo.png"/>
+    <img width="300"  src="http://toxidrogasun.unal.edu.co/images/logo.png" >
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
     <span class="navbar-toggler-icon"></span>
