--- a/src/app/user-suscribing/user-suscribing.component.css
+++ b/src/app/user-suscribing/user-suscribing.component.css
@@ -19,6 +19,11 @@
     min-width:300px;
     padding:20px;
     width:320px;
+    position: fixed;
+    bottom: 145px;
+    right: 450px;
+    border: 3px solid rgba(33, 47, 173, 0.534);
+    z-index: 4; 
     }
  .form-field {
     border: 1px solid #1a1918;
@@ -100,4 +105,17 @@
     background: -o-linear-gradient(top, #74a0e8, #29508f);
     background-image: -ms-linear-gradient(top, #74a0e8 0%, #29508f 100%);
     color: #fff;
+    }
+
+.submit-ok {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 18px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #FFFFF3;
+    font-weight: 700;
+    text-decoration: none;
+    font-style: italic;
+    font-variant: small-caps;
+    text-transform: capitalize;
     }
