--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,25 +7,25 @@
     <div style="text-align:left">
     <mat-toolbar >
       <button mat-button (click)="sidenav.toggle ()" ><mat-icon>menu</mat-icon></button>
-      <span>Recent newsletters </span>  
+      <span>Recent newsletters </span>
       <span class="example-spacer"></span>
       <button mat-button [matMenuTriggerFor]="appMenu"><mat-icon>settings</mat-icon></button>
     </mat-toolbar>
-        
+
     <mat-menu #appMenu="matMenu">
       <button mat-menu-item> Settings </button>
       <button mat-menu-item> Help </button>
     </mat-menu>
     <mat-sidenav-container class="example-container">
-      
+
       <mat-sidenav #sidenav class="example-sidenav">
         <mat-list class="list-nav" width="400">
             <mat-list-item class="list-item-tittle"> <h2>Topics</h2> </mat-list-item>
-            
+
             <mat-list-item class="list-item" *ngFor="let topic of mTopics; let i = index" (click)="searchArticles(source.id);sidenav.close();">
-             
+
               <div mat-card-avatar  [ngStyle]="{'background-image': 'url(../assets/images/'+ topic.img_id +'.png)'}" class="example-header-image"></div>
-              
+
               <span class="source-name">  {{topic.name}}</span>
               <button class= "mat-button1" color="primary" ><mat-icon>beenhere</mat-icon> Suscribe</button>
             </mat-list-item>
@@ -51,13 +51,14 @@
         </mat-card-actions>
       </mat-card>
     </mat-sidenav-container>
-    
-    
-    
-    
+
+
+
+
   </div>
 </div>
 <app-user-suscribing></app-user-suscribing>
+<app-login></app-login>
 
 
 
