--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,4 @@
-<h1>
-    
-  </h1>
-<p>
-  <img width="80%" alt="banner" src="http://toxidrogasun.unal.edu.co/images/respuestas.png"/>
-</p>
+
+<div class="container">
+  <img alt="banner" src="http://toxidrogasun.unal.edu.co/images/respuestas.png"/>
+</div>
