--- a/src/app/user-suscribing/user-suscribing.component.html
+++ b/src/app/user-suscribing/user-suscribing.component.html
@@ -1,16 +1,17 @@
 <div class="comp-user-sub" [hidden]="hidden" >
-  <form class="form-container" >
+  <form #userForm="ngForm" class="form-container" >
     <div class="form-title"><h2>Suscribirse</h2></div>
     <div class="form-title">Nombre</div>
-    <input class="form-field" type="text" [formControl]="name" /><br />
+    <input id="name" class="form-field" type="text" [formControl]="name" /><br />
     <div class="form-title">Email</div>
-    <input class="form-field" type="text" [formControl]="email" /><br />
+    <input id="email" class="form-field" type="text" [formControl]="email" /><br />
     <div class="submit-ok">
       <p>Suscripcion Exitosa!!   <br> Se te notificara cuando lleguen nuevos boletines :)</p>
       </div>
     <div class="submit-container">
-    <input class="submit-button" type="submit" value="Submit" />
+    <input class="submit-button" type="submit" value="Submit" (click)="suscribeUser()"/>
     </div>
   </form>
+  {{userForm.value | json}}
 </div>
 
