--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,23 @@
 <H1>{{title}}</H1>
+<!--
+<div class="row">
+<input class="form-control" type="text"/>
+<button class="btn btn-primary">Buscar</button>
+</div>
+-->
 <agm-map [latitude]="lat" [longitude]="lng">
   <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+  <agm-marker 
+      *ngFor="let m of markers; let i = index"
+      (markerClick)="clickedMarker(m.label, i)"
+      [latitude]="m.lat"
+      [longitude]="m.lng"
+      [label]="m.label"
+      >
+      
+    <agm-info-window>
+      <strong>InfoWindow content</strong>
+    </agm-info-window>
+    
+  </agm-marker>
 </agm-map>
