--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -5,6 +5,7 @@
 <button class="btn btn-primary">Buscar</button>
 </div>
 -->
+{{centers}}
 <agm-map [latitude]="lat" [longitude]="lng">
   <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
   <agm-marker 
