--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -5,19 +5,18 @@
 <button class="btn btn-primary">Buscar</button>
 </div>
 -->
-{{centers}}
 <agm-map [latitude]="lat" [longitude]="lng">
   <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
   <agm-marker 
-      *ngFor="let m of markers; let i = index"
-      (markerClick)="clickedMarker(m.label, i)"
+      *ngFor="let m of centers; let i = index"
+      (markerClick)="clickedMarker(m.name, i)"
       [latitude]="m.lat"
       [longitude]="m.lng"
-      [label]="m.label"
+      [label]="m.name"
       >
       
     <agm-info-window>
-      <strong>InfoWindow content</strong>
+      <strong>"m.address"</strong>
     </agm-info-window>
     
   </agm-marker>
