--- a/src/app/user-suscribing/user-suscribing.component.css
+++ b/src/app/user-suscribing/user-suscribing.component.css
@@ -1,4 +1,6 @@
 .form-container {
+    right: 30%;
+    margin : 0 auto;
     border: 1px solid #373b44;
     background: #373b44;
     background: -webkit-gradient(linear, left top, left bottom, from(#5e6575), to(#373b44));
@@ -21,7 +23,6 @@
     width:320px;
     position: fixed;
     bottom: 145px;
-    right: 450px;
     border: 3px solid rgba(33, 47, 173, 0.534);
     z-index: 4; 
     }
