--- a/src/app/user-suscribing/user-suscribing.component.html
+++ b/src/app/user-suscribing/user-suscribing.component.html
@@ -9,7 +9,8 @@
       <p>Suscripcion Exitosa!!   <br> Se te notificara cuando lleguen nuevos boletines :)</p>
       </div>
     <div class="submit-container">
-    <input class="submit-button" type="submit" value="Submit" (click)="suscribeUser()"/>
+    <input class="submit-button" type="submit" value="Enviar" (click)="suscribeUser()"/> -
+    <input class="btn btn-danger" type="submit" value="Cancelar" (click)="toggle()"/>
     </div>
   </form>
 </div>
