--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,6 +18,9 @@
       <li>
         <a class="nav-link" routerLink="/map">Mapa centros de atención</a>
       </li>
+      <li>
+        <a class="nav-link" routerLink="/login"><i class="fas fa-stroopwafel"></i>Iniciar sesión</a>
+      </li>
     </ul>
 
   </div>
