--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -219,9 +219,9 @@ iframe {
   width: 500px;
   border-radius: 10px;
   overflow: hidden;
-  padding: 55px 55px 37px 55px;
+  padding: 30px 55px 37px 55px;
 
-  background: #9152f8;
+  background-color: rgb(71, 189, 224);
   background: -webkit-linear-gradient(top, #7579ff, #b224ef);
   background: -o-linear-gradient(top, #7579ff, #b224ef);
   background: -moz-linear-gradient(top, #7579ff, #b224ef);
@@ -451,7 +451,7 @@ iframe {
   height: 50px;
   border-radius: 25px;
 
-  background: #9152f8;
+  background-color: rgb(71, 189, 224);
   background: -webkit-linear-gradient(bottom, #7579ff, #b224ef);
   background: -o-linear-gradient(bottom, #7579ff, #b224ef);
   background: -moz-linear-gradient(bottom, #7579ff, #b224ef);
